infrastructure/kubernetes/ingress/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corestate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /backup
        pathType: Prefix
        backend:
          service:
            name: backup-engine-svc
            port:
              number: 80
